--- a/Views/Lugares/Index.cshtml
+++ b/Views/Lugares/Index.cshtml
@@ -4,11 +4,11 @@
 
 
 
-<link rel="stylesheet" href="~/css/lugares.css">
+<link rel="stylesheet" href="~/css/tipoEjercicios.css">
 
 
 
-<h1 class="t-stroke t-shadow">LUGARES!</h1>
+<h1 class="t-stroke2 t-shadow2">LUGARES!</h1>
 
 
 <!-- Button Modal -->
@@ -26,7 +26,7 @@
       </span>
     </button>
   </div>
-  <table class="table tablaLugares">
+  <table class="table table-primary table-striped">
     <thead class="headTabla">
       <tr>
         <th>LUGAR</th>
