--- a/wwwroot/css/tipoEjercicios.css
+++ b/wwwroot/css/tipoEjercicios.css
@@ -7,7 +7,7 @@ body{
 
 
 
-.t-stroke {
+.t-stroke1 {
     position: relative;
     text-align: center;
     font-size: 5rem;
@@ -19,11 +19,11 @@ body{
     -webkit-text-stroke-color: #ffffff;
 }
 
-.t-shadow {
+.t-shadow1 {
     position: relative;
 }
 
-.t-shadow::after {
+.t-shadow1::after {
     content: "TIPO DE EJERCICIOS!";
     font-size: 5rem;
     letter-spacing: 0px;
@@ -44,6 +44,86 @@ body{
     z-index: -1;
     transition: all 0.5s ease;
 }
+
+
+.t-stroke2 {
+    position: relative;
+    text-align: center;
+    font-size: 5rem;
+    color: transparent;
+    padding-bottom: 2rem;
+    -moz-text-stroke-width: 2px;
+    -webkit-text-stroke-width: 2px;
+    -moz-text-stroke-color: #000000;
+    -webkit-text-stroke-color: #ffffff;
+}
+
+.t-shadow2 {
+    position: relative;
+}
+
+.t-shadow2::after {
+    content: "LUGARES!";
+    font-size: 5rem;
+    letter-spacing: 0px;
+    background: url(../img/fondoTitulo.jpg) 50% 47%
+    repeat;
+    background-size: 150%;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -moz-text-stroke-width: 0;
+    -webkit-text-stroke-width: 0;
+    position: absolute;
+    text-align: center;
+    left: 8px;
+    right: 0;
+    top: 6px;
+    z-index: -1;
+    transition: all 0.5s ease;
+}
+
+
+.t-stroke3 {
+    position: relative;
+    text-align: center;
+    font-size: 5rem;
+    color: transparent;
+    padding-bottom: 2rem;
+    -moz-text-stroke-width: 2px;
+    -webkit-text-stroke-width: 2px;
+    -moz-text-stroke-color: #000000;
+    -webkit-text-stroke-color: #ffffff;
+}
+
+.t-shadow3 {
+    position: relative;
+}
+
+.t-shadow3::after {
+    content: "EVENTOS DEPORTIVOS!";
+    font-size: 5rem;
+    letter-spacing: 0px;
+    background: url(../img/fondoTitulo.jpg) 50% 47%
+    repeat;
+    background-size: 150%;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -moz-text-stroke-width: 0;
+    -webkit-text-stroke-width: 0;
+    position: absolute;
+    text-align: center;
+    left: 8px;
+    right: 0;
+    top: 6px;
+    z-index: -1;
+    transition: all 0.5s ease;
+}
+
+
 
 .modal{
     background-color: rgba(0, 0, 0, 0.5);
@@ -194,49 +274,8 @@ body{
 
 
 
-.tablaTipoEjercicios{
-    color: white;
-    border-radius: 15px;
-    width: 60%;
-    margin: auto;
-    justify-content: center;
-    margin-left: 150px;
-    margin-top: 40px;
-    border: 1px solid white;
-  }
-  
-  .headTabla{
-    border: white;
-    background: rgb(0,226,121);
-    background: radial-gradient(circle, rgba(9, 87, 51, 0.658) 20%, rgba(0,0,0,.8) 91%);
-    color: white;
-    font-size: 18px;
-    width: 60%;
-  }
-  
-  
-  .bodyTabla{
-    color: white;
-    background: rgb(0,226,121);
-    background: radial-gradient(circle, rgba(7, 124, 70, 0.658) 20%, rgba(0,0,0,.8) 91%);
-    font-weight: lighter;
-    font-size: 15px;
-    width: 60%;
-  }
-  
-  
-  .tablaDescripcion{
-    vertical-align: middle;
-    font-weight: bolder;
-  }
-  
-  .botonTabla{
-    font-size: 16px;
-    vertical-align: center;
-    display: flex;
-    flex-direction: row;
-    margin: auto;
-  }
+
+
   /* ICONOS BORRAR Y MODIFICAR */
   .iconoBM{
     margin: auto;
