--- a/Views/EventosDeportivos/Index.cshtml
+++ b/Views/EventosDeportivos/Index.cshtml
@@ -55,7 +55,7 @@
           <div class="mb-3">
             <input type="hidden" id="EventoDeportivoID" value="0" />
             <label for="Descripcion" class="form-label">Descripción</label>
-            <input type="text" class="form-control" id="Descripcion" placeholder="Evento deportivo...">
+            <input type="text" class="form-control text-white" id="Descripcion" placeholder="Evento deportivo...">
           </div>
         </form>
       </div>
