--- a/Views/Seguimiento/Informe.cshtml
+++ b/Views/Seguimiento/Informe.cshtml
@@ -1,5 +1,9 @@
 <link rel="stylesheet" href="~/css/ejerciciosFisicos.css">
 
+
+<input type="text" id="PersonaID" value="@ViewBag.PersonaID">
+
+
 <div class="row">
   <div class="col-md-3">
     <label for="BuscarInicioActividad" class="text-white form-label">Inicio de la actividad</label>
