--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,5 +1,12 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+  @{
+    var user = await UserManager.GetUserAsync(User);
+  }
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,36 +19,8 @@
     <link rel="stylesheet" href="~/lib/fontawesome-free-6.5.2-web/css/solid.css">
 
 </head>
-<body>
-    @* <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="TipoEjercicios" asp-action="Index">Tipo de ejercicios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="EjerciciosFisicos" asp-action="Index">EjerciciosFisicos</a>
-                        </li>
-                    </ul>
-                    <partial name="_LoginPartial" />
-                </div>
-            </div>
-        </nav>
-    </header> *@
 
+<body>
     <input type="checkbox" id="check">
     <label class="labelCheck" for="check">
         <i class="fa-solid fa-bars" id="open"></i>
@@ -50,37 +29,57 @@
     <div class="sidebar">
         <header>Workout Watch!</header>
         <ul class="listaSidebar">
-            <li>
-                <a asp-controller="Home" asp-action="Index"><i class="fa-solid fa-house"></i>Home</a>
-            </li>
-            <li>
-                <a asp-controller="Seguimiento" asp-action="Index"><i class="fa-solid fa-chart-pie"></i>Seguimiento</a>
-            </li>
-            <li>
-                <a asp-controller="TipoEjercicios" asp-action="Index"><i class="fa-solid fa-dumbbell"></i>Tipo de Ejercicios</a>
-            </li>
-            <li>
-                <a asp-controller="Lugares" asp-action="Index"><i class="fa-solid fa-map-location-dot"></i>Lugares</a>
-            </li>
-            <li>
-                <a asp-controller="EventosDeportivos" asp-action="Index"><i class="fa-regular fa-calendar-minus"></i>Eventos deportivos</a>
-            </li>
-            <li>
-                <a asp-controller="EjerciciosFisicos" asp-action="Index"><i class="fa-solid fa-stopwatch-20"></i>Ejercicios Físicos</a>
-            </li>
-            <li>
-                <a asp-controller="Seguimiento" asp-action="Informe"><i class="fa-solid fa-database"></i>Informe</a>
-            </li>
-            <li>
-                <a asp-controller="Seguimiento" asp-action="InformeLugar"><i class="fa-solid fa-database"></i>Informe lugar</a>
-            </li>
-            
-            <footer class="footerSidebar">
-                <partial class="footerSidebar" name="_LoginPartial" />
-            </footer>
-        </ul>   
+            @if (user != null && await UserManager.IsInRoleAsync(user, "ADMINISTRADOR"))
+            {
+                <li>
+                    <a asp-controller="Home" asp-action="Index"><i class="fa-solid fa-house"></i>Home</a>
+                </li>
+                <li>
+                    <a asp-controller="TipoEjercicios" asp-action="Index"><i class="fa-solid fa-dumbbell"></i>Tipo de
+                        Ejercicios</a>
+                </li>
+                <li>
+                    <a asp-controller="EventosDeportivos" asp-action="Index"><i
+                            class="fa-regular fa-calendar-minus"></i>Eventos deportivos</a>
+                </li>
+                <footer class="footerSidebar">
+                    <partial class="footerSidebar" name="_LoginPartial" />
+                </footer>
+            }
+            else
+            {
+                <li>
+                    <a asp-controller="Home" asp-action="Index"><i class="fa-solid fa-house"></i>Home</a>
+                </li>
+                <li>
+                    <a asp-controller="Seguimiento" asp-action="Index"><i class="fa-solid fa-chart-pie"></i>Seguimiento</a>
+                </li>
+                <li>
+                    <a asp-controller="Lugares" asp-action="Index"><i class="fa-solid fa-map-location-dot"></i>Lugares</a>
+                </li>
+                <li>
+                    <a asp-controller="EjerciciosFisicos" asp-action="Index"><i
+                            class="fa-solid fa-stopwatch-20"></i>Ejercicios Físicos</a>
+                </li>
+                <li>
+                    <a asp-controller="Seguimiento" asp-action="Informe"><i class="fa-solid fa-database"></i>Informe</a>
+                </li>
+                <li>
+                    <a asp-controller="Seguimiento" asp-action="InformeLugar"><i class="fa-solid fa-database"></i>Informe
+                        lugar</a>
+                </li>
+                <li>
+                    <a asp-controller="Seguimiento" asp-action="Informe4Niveles"><i class="fa-solid fa-database"></i>Informe
+                        4 niveles</a>
+                </li>
+
+                <footer class="footerSidebar">
+                    <partial class="footerSidebar" name="_LoginPartial" />
+                </footer>
+            }
+        </ul>
     </div>
-    
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
@@ -88,9 +87,9 @@
     </div>
 
     @* <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - Proyecto1_2024 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+    <div class="container">
+    &copy; 2024 - Proyecto1_2024 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    </div>
     </footer> *@
 
 
@@ -100,4 +99,5 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+
 </html>
