--- a/Views/TipoEjercicios/Index.cshtml
+++ b/Views/TipoEjercicios/Index.cshtml
@@ -50,7 +50,7 @@
           <div class="mb-3">
             <input type="hidden" id="TipoEjercicioID" value="0" />
             <label for="descripcion" class="form-label">DESCRIPCIÓN</label>
-            <input type="text" class="form-control" id="descripcion" placeholder="Nombre del tipo de actividad">
+            <input type="text" class="form-control text-white" id="descripcion" placeholder="Nombre del tipo de actividad">
           </div>
         </form>
       </div>
