--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -9,43 +9,55 @@
 
 
 
-<h1 class="t-stroke t-shadow">INICIAR SESIÓN</h1>
+
+
+<div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12">
+        <h1 class="t-stroke t-shadow">INICIAR SESIÓN!</h1>
+    </div>
+</div>
 
 <div class="row">
     <div class="col-md-4 formLogin">
         <section>
             <form id="account" method="post">
-                <h2>Ingresar</h2>
+                <h2>Ingresá tus datos</h2>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-                <div class="form-floating mb-3">
-                    <input asp-for="Input.Email" class="form-control input-email" autocomplete="username" aria-required="true" placeholder="nombre@ejemplo.com" />
-                    <label asp-for="Input.Email" class="form-label">Email</label>
+
+                <div class="coolinput mb-3">
+                    <label asp-for="Input.Email" class="text">Email</label>
+                    <input asp-for="Input.Email" class="input"  autocomplete="username"
+                        aria-required="true" placeholder="nombre@ejemplo.com" />
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
-                <div class="form-floating mb-3">
-                    <input asp-for="Input.Password" class="form-control input-password" autocomplete="current-password" aria-required="true" placeholder="contraseña" />
-                    <label asp-for="Input.Password" class="form-label">Contraseña</label>
+
+                <div class="coolinput mb-3">
+                    <label asp-for="Input.Password" class="text">Contraseña</label>
+                    <input asp-for="Input.Password" class="input"  autocomplete="current-password"
+                        aria-required="true" placeholder="contraseña" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
-                <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary btn-iniciar-sesion">Iniciar Sesión</button>
+
+                <div class="mt-3">
+                    <button id="login-submit" type="submit"
+                        class="w-100 btn btn-lg btn-primary btn-iniciar-sesion">Iniciar Sesión</button>
                 </div>
-                <div>
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">¿Olvidó su contraseña?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Registrarse como nuevo usuario</a>
-                    </p>
-                    <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Reenviar email de confirmación</a>
-                    </p>
+
+                <div class="mt-3">
+                    <p><a id="forgot-password" asp-page="./ForgotPassword">¿Olvidó su contraseña?</a></p>
+                    <p><a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Registrarse como nuevo
+                            usuario</a></p>
+                    <p><a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Reenviar email de
+                            confirmación</a></p>
                 </div>
             </form>
         </section>
     </div>
 </div>
+
+
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
