--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -14,21 +14,66 @@
             <h2>Crea una nueva cuenta.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control input-user" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email">Email</label>
+
+            <!-- Campo para Nombre Completo -->
+            <div class="coolinput mb-3">
+                <label class="text" asp-for="Input.NombreCompleto">Nombre Completo</label>
+                <input asp-for="Input.NombreCompleto" class="input" />
+                <span asp-validation-for="Input.NombreCompleto" class="text-danger"></span>
+            </div>
+
+            <!-- Campo para Email -->
+            <div class="coolinput mb-3">
+                <label class="text" asp-for="Input.Email">Email</label>
+                <input asp-for="Input.Email" class="input" autocomplete="username" aria-required="true"
+                    placeholder="name@example.com" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Password" class="form-control input-password" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.Password">Password</label>
+
+            <div class="d-flex flex-column flex-md-row justify-content-between">
+                <div class="coolinput mb-3 me-md-3 flex-fill">
+                    <label class="text"  asp-for="Input.FechaNacimiento">Fecha de nacimiento</label>
+                    <input asp-for="Input.FechaNacimiento" class="input" type="date" />
+                    <span asp-validation-for="Input.FechaNacimiento" class="text-danger"></span>
+                </div>
+
+                <div class="coolinput mb-3 flex-fill">
+                    <label class="text" asp-for="Input.Genero">Genero</label>
+                    @Html.DropDownListFor(m => m.Input.Genero, ViewData["Generos"] as List<SelectListItem>, new { @class= "input" })
+                    <span asp-validation-for="Input.Genero" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="d-flex flex-column flex-md-row justify-content-between">
+                <div class="coolinput mb-3 me-md-3 flex-fill">
+                    <label class="text" asp-for="Input.Peso">Peso en kg</label>
+                    <input asp-for="Input.Peso" class="input" type="number" />
+                    <span asp-validation-for="Input.Peso" class="text-danger"></span>
+                </div>
+
+                <div class="coolinput mb-3 flex-fill">
+                    <label class="text" asp-for="Input.Altura">Altura en cm</label>
+                    <input asp-for="Input.Altura" class="input" />
+                    <span asp-validation-for="Input.Altura" class="text-danger"></span>
+                </div>
+            </div>
+
+            <!-- Campo para Password -->
+            <div class="coolinput mb-3">
+                <label class="text" asp-for="Input.Password">Password</label>
+                <input asp-for="Input.Password" class="input" autocomplete="new-password" aria-required="true"
+                    placeholder="password" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.ConfirmPassword" class="form-control input-password" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.ConfirmPassword">Confirm Password</label>
+
+            <!-- Campo para Confirm Password -->
+            <div class="coolinput mb-3">
+                <label class="text" asp-for="Input.ConfirmPassword">Confirm Password</label>
+                <input asp-for="Input.ConfirmPassword" class="input" autocomplete="new-password" aria-required="true"
+                    placeholder="password" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
