--- a/Views/Seguimiento/Index.cshtml
+++ b/Views/Seguimiento/Index.cshtml
@@ -2,8 +2,10 @@
   ViewData["Title"] = "Seguimiento";
 }
 
-
 <link rel="stylesheet" href="~/css/Seguimiento.css">
+
+<input type="text" id="PersonaID" value="@ViewBag.PersonaID">
+
 <div>
   <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12">
