--- a/wwwroot/css/Personas.css
+++ b/wwwroot/css/Personas.css
@@ -5,84 +5,82 @@ body {
     background-size: cover;
 }
 
+
 .t-stroke {
-  position: relative;
-  text-align: center;
-  font-size: 5rem;
-  color: transparent;
-  padding-bottom: 1rem;
-  -moz-text-stroke-width: 2px;
-  -webkit-text-stroke-width: 2px;
-  -moz-text-stroke-color: #000000;
-  -webkit-text-stroke-color: #ffffff;
+    position: relative;
+    text-align: center;
+    font-size: 5rem;
+    color: transparent;
+    padding-bottom: 2rem;
+    -moz-text-stroke-width: 2px;
+    -webkit-text-stroke-width: 2px;
+    -moz-text-stroke-color: #000000;
+    -webkit-text-stroke-color: #ffffff;
 }
 
 .t-shadow {
-  position: relative;
+    position: relative;
 }
 
 .t-shadow::after {
-  content: "REGISTRATE!";
-  font-size: 5rem;
-  letter-spacing: 0px;
-  background: url(../img/fondoTitulo.jpg) 50% 47% repeat;
-  background-size: 150%;
-  -webkit-text-fill-color: transparent;
-  -moz-text-fill-color: transparent;
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  -moz-text-stroke-width: 0;
-  -webkit-text-stroke-width: 0;
-  position: absolute;
-  text-align: center;
-  left: 8px;
-  right: 0;
-  top: 6px;
-  z-index: -1;
-  transition: all 0.5s ease;
+    content: "PERFIL!";
+    font-size: 5rem;
+    letter-spacing: 0px;
+    background: url(../img/fondoTitulo.jpg) 50% 47%
+    repeat;
+    background-size: 150%;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -moz-text-stroke-width: 0;
+    -webkit-text-stroke-width: 0;
+    position: absolute;
+    text-align: center;
+    left: 8px;
+    right: 0;
+    top: 6px;
+    z-index: -1;
+    transition: all 0.5s ease;
 }
 
-.formRegister {
-  background-color: #e8e8e8;
-  color: rgb(59, 59, 59);
-  padding: 2rem;
-  border-radius: 1rem;
-  border: 2px #000000 solid;
-  width: 30rem;
+.formPersona{
+    background-color: #e8e8e8;
+    color: rgb(59, 59, 59);
+    padding: 2rem;
+    border-radius: 1rem;
+    border: 2px solid rgb(0, 0, 0);
 }
 
-
-
-/* From Uiverse.io by aunis1616 */
 .coolinput {
-  display: flex;
-  flex-direction: column;
-  position: static;
-  max-width: 500px;
-  min-width: 198px;
-}
-
-.coolinput label.text {
-  font-size: 0.75rem;
-  color: #000000;
-  font-weight: 700;
-  position: relative;
-  top: 0.5rem;
-  margin: 0 0 0 7px;
-  padding: 0 3px;
-  background: #e8e8e8;
-  width: fit-content;
-}
-
-.coolinput .input {
-    padding: 11px 10px;
-    font-size: 14px;
-    border: 2px #000000 solid;
-    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    position: static;
+    max-width: 500px;
+    min-width: 198px;
+  }
+  
+  .coolinput label.text {
+    font-size: 0.75rem;
+    color: #000000;
+    font-weight: 700;
+    position: relative;
+    top: 0.5rem;
+    margin: 0 0 0 7px;
+    padding: 0 3px;
     background: #e8e8e8;
+    width: fit-content;
   }
   
-  .coolinput .input:focus {
-    outline: none;
-  }
-  
+  .coolinput .input {
+      padding: 11px 10px;
+      font-size: 14px;
+      border: 2px #000000 solid;
+      border-radius: 5px;
+      background: #e8e8e8;
+    }
+    
+    .coolinput .input:focus {
+      outline: none;
+    }
+    
