--- a/wwwroot/css/tipoEjercicios.css
+++ b/wwwroot/css/tipoEjercicios.css
@@ -123,6 +123,43 @@ body{
     transition: all 0.5s ease;
 }
 
+.t-stroke4 {
+    position: relative;
+    text-align: center;
+    font-size: 5rem;
+    color: transparent;
+    padding-bottom: 2rem;
+    -moz-text-stroke-width: 2px;
+    -webkit-text-stroke-width: 2px;
+    -moz-text-stroke-color: #000000;
+    -webkit-text-stroke-color: #ffffff;
+}
+.t-shadow4 {
+    position: relative;
+}
+
+.t-shadow4::after {
+    content: "PERFIL!";
+    font-size: 5rem;
+    letter-spacing: 0px;
+    background: url(../img/fondoTitulo.jpg) 50% 47%
+    repeat;
+    background-size: 150%;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -moz-text-stroke-width: 0;
+    -webkit-text-stroke-width: 0;
+    position: absolute;
+    text-align: center;
+    left: 8px;
+    right: 0;
+    top: 6px;
+    z-index: -1;
+    transition: all 0.5s ease;
+}
+
 
 
 .modal{
@@ -163,13 +200,13 @@ body{
 
 .form-control{
     background-color: rgba(126, 126, 126, 0.322);
-    color: rgb(0, 0, 0);
+    color: rgb(214, 214, 214);
     text-transform: uppercase;
 }
 
 .form-control:focus-visible{
     background-color: rgba(126, 126, 126, 0.322);
-    color: rgb(0, 0, 0);
+    color: rgb(218, 218, 218);
     text-transform: uppercase;
 }
 
