--- a/wwwroot/css/tipoEjercicios.css
+++ b/wwwroot/css/tipoEjercicios.css
@@ -5,6 +5,43 @@ body{
     background-image: fixed;
 }
 
+.t-stroke {
+    position: relative;
+    text-align: center;
+    font-size: 5rem;
+    color: transparent;
+    padding-bottom: 2rem;
+    -moz-text-stroke-width: 2px;
+    -webkit-text-stroke-width: 2px;
+    -moz-text-stroke-color: #000000;
+    -webkit-text-stroke-color: #ffffff;
+}
+
+.t-shadow {
+    position: relative;
+}
+
+.t-shadow::after {
+    content: "DEPORTISTAS!";
+    font-size: 5rem;
+    letter-spacing: 0px;
+    background: url(../img/fondoTitulo.jpg) 50% 47%
+    repeat;
+    background-size: 150%;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -moz-text-stroke-width: 0;
+    -webkit-text-stroke-width: 0;
+    position: absolute;
+    text-align: center;
+    left: 8px;
+    right: 0;
+    top: 6px;
+    z-index: -1;
+    transition: all 0.5s ease;
+}
 
 
 .t-stroke1 {
