--- a/Views/EjerciciosFisicos/Index.cshtml
+++ b/Views/EjerciciosFisicos/Index.cshtml
@@ -65,6 +65,8 @@
         <th>FIN</th>
         <th>AL INICIAR:</th>
         <th>AL FINALIZAR:</th>
+        <th>DURACION</th>
+        <th>CALORIAS</th>
         <th>OBSERVACIONES</th>
         <th></th>
         <th></th>
