--- a/Views/Seguimiento/Informe.cshtml
+++ b/Views/Seguimiento/Informe.cshtml
@@ -26,7 +26,8 @@
       <th>Tipo Ejercicio</th>
       <th>INICIO</th>
       <th>FIN</th>
-      <th>Duracion</th>
+      <th>DURACION</th>
+      <th>CALORIAS QUEMADAS</th>
       <th>AL INICIAR:</th>
       <th>AL FINALIZAR:</th>
       <th>OBSERVACIONES</th>
