--- a/Views/Seguimiento/InformeLugar.cshtml
+++ b/Views/Seguimiento/InformeLugar.cshtml
@@ -27,6 +27,7 @@
       <th>Inicio</th>
       <th>Fin</th>
       <th>Duracion</th>
+      <th>Calorias quemadas</th>
       <th>Ejercicio realizado</th>
       <th>Observaciones</th>
     </tr>
