--- a/Views/TipoEjercicios/Index.cshtml
+++ b/Views/TipoEjercicios/Index.cshtml
@@ -27,6 +27,7 @@
     <thead class="headTabla">
       <tr>
         <th>EJERCICIO</th>
+        <th>MET</th>
         <th class="text-center" style="width: 70px;">EDITAR</th>
         <th class="text-center" style="width: 40px;">ELIMINAR</th>
       </tr>
@@ -51,6 +52,10 @@
             <input type="hidden" id="TipoEjercicioID" value="0" />
             <label for="descripcion" class="form-label">DESCRIPCIÓN</label>
             <input type="text" class="form-control text-white" id="descripcion" placeholder="Nombre del tipo de actividad">
+          </div>
+          <div class="mb-3">
+            <label for="MET" class="form-label">MET</label>
+            <input type="text" class="form-control text-white" id="MET" placeholder="MET">
           </div>
         </form>
       </div>
