--- a/Views/Personas/Index.cshtml
+++ b/Views/Personas/Index.cshtml
@@ -38,10 +38,9 @@
           <label class="text" for="Altura">Altura en CM</label>
           <input type="text" step="0.01" id="Altura" name="Altura" class="input" placeholder="Altura en cm" />
         </div>
-
       </div>
       <div class="text-center">
-        <button type="submit" id="btnGuardar" class="btn btn-success fw-bold btn-safe" onclick="ActualizarInformacion()">Guardar cambios</button>
+        <button type="submit" id="btnGuardar" class="btn btn-outline-success fw-bold btn-safe" onclick="ActualizarInformacion()">Guardar cambios</button>
       </div>
     </form>
   </div>
